# automated-job-search

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  docker-compose.yml  my_resume.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __main__.py  config.py  db.py  logging.py  main.py  scheduler.py
app/api/: analytics.py  applications.py  auth.py  auth_gmail.py  drafts.py  health.py  jobs.py  outreach.py
app/auth/: deps.py  gmail_oauth.py  ratelimit.py  session.py
app/generator/: cold_email.py  cover_letter.py  resume.py
app/llm/: __init__.py  client.py  gemini_client.py  groq_client.py
app/models/: __init__.py  application.py  base.py  draft.py  gmail_token.py  job.py  llm_call.py  outreach_event.py  profile.py  user.py
app/ranker/: embedding.py  keyword.py  llm_judge.py
app/schemas/: auth.py  draft.py  job.py  outreach.py
app/scrapers/: _ratelimit.py  _robots.py  base.py  internshala.py  remoteok.py  rozee.py
app/services/: application_status.py  dedup.py  generation.py  pdf.py  profile.py  sender.py
docs/: AGENTS.md  ARCHITECTURE.md  OPS.md
docs/plan/: _contract.md  phase-a.md  phase-b.md  phase-c.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_llm_matched_skills.py  (+2 more)
scripts/: seed_user.py
tests/: conftest.py  phase_a_integration.py  test_cascade_delete.py  test_health.py  test_layout.py  test_scheduler.py  test_scheduler_sender.py  test_schema_roundtrip.py  test_unique_constraint.py  test_vector_query.py
web/: package.json  pnpm-lock.yaml  vitest.setup.ts
(+53 files in other folders)
